# my_trade

./: .factorStock_last.json  .gitignore  .selectStock_last.json  .stockpush_last.json  .valuePEPB_last.json  .valueStock_last.json  AGENTS.md  ANALYSIS.md  README.md  STRATEGY.md  annualSnapshotBuild.py  baseInfo.md  dailyFundamentalSelect.py  dailyReportPush.py  factorStock.py  fixBacktestReturns.py  fixedFundamentalPool.py  formula33Stats.py  fullMarketFundamentalUpdate.py  install_daily_task.ps1  install_github_runner.ps1  pipelineAlert.py  point_in_time.py  portfolioPush.py  portfolioSelect.py  pyproject.toml  q1Backtest.py  quarterlyFundamentalBacktest.py  requirements-actions.txt  retracement_gui.py  rightSideBacktest.py  run_1630.sh  run_17.sh  run_1730.sh  run_1745.sh  run_18.sh  run_daily_analysis.ps1  run_daily_analysis.sh  scaleBacktest.py  sectorStats.py  (+10 more)
.claude/: settings.local.json
apps/: __init__.py  daily_pipeline.py  daily_report.py  factor_selection.py  formula33.py  fundamental_selection.py  fundamental_update.py  miniqmt.py  miniqmt_backtest.py  pipeline_alert.py  portfolio_backtest.py  quick_watch.py  rebuild_candidate_history.py  rebuild_formula_history.py  rebuild_mainline_history.py  sector_analysis.py
config/: miniqmt.example.json  pipeline.toml  trade_plans.json  watch_stocks.json
docs/: CRITICAL-candidate-pool-missing-bulls.md  FINAL-IMPROVEMENT-PLAN.md  README.md  actual-candidate-sources.txt  all-candidate-sources.txt  all-stocks-pv-ratio.txt  backtest-20240924-diagnosis.md  breakout-check.txt  candidate-columns.txt  candidate-filter-analysis-results.txt  candidate-filter-analysis.md  current-selection-entry-exit-strategy.md  current-selection-summary.txt  current-selection-trading-logic.md  deep-analysis-why-low-returns.md  improvement-plan-2026-07-15.md  left-right-logic-analysis.md  missing-quality-horse-pathway.md  price-value-ratio.txt  pullback_plus1_t7_vs_current_analysis.md  qfq-lookahead-and-right-funnel-audit-2026-07-16.md  right-side-low-frequency-quant-model-2026-07-16.md  right-side-quant-rebuild-2026-07-15.md  stock1-analysis.txt  stock2-analysis.txt  stock3-analysis.txt  stock4-analysis.txt  table-schema.txt  (+6 more)
(+11141 files in other folders)
