[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "my-trade"
version = "0.1.0"
description = "A-share research and stock selection pipeline"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.5,<2",
    "pytz>=2024,<2027",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
