[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "my-trade"
version = "0.1.0"
description = "A-share research and stock selection pipeline"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.5,<2",
    "pytz>=2024,<2027",
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<10",
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "stock_research*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--basetemp=var/tmp/pytest -p no:cacheprovider"
